multiple bug fixes, - fixed issue where game score was 0 if time runs out despite answering questions correctly, -fixed issue where answers werent displlaying correctly on smaller devices, added how to play page, fixed some question answers to be more clear

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,13 +53,24 @@ body {
       color: var(--primary);
   }
 
-.home-container {
+.home-container,
+.how-to-container {
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     margin-top: 2rem;
+}
+
+.how-to-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    margin: 2rem 0;
+    line-height: 1.5rem;
 }
 
 #play-button {
@@ -104,6 +115,7 @@ body {
 
 #home-screen-title {
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 /* Buttons */
